# YiaEngine

./: .gitattributes  .gitignore  App.cpp  App.h  CMakeLists.txt  CMakeSettings.json  DxSample.cpp  DxSample.h  EntryPoint.h  README.md  SampleDll.cpp  SampleDll.h  WindowBase.cpp  Yia.sln  YiaComponent.h  YiaEngine.h  YiaWindow.cpp  YiaWindow.h  imgui.ini  pch.h
Asset/: untitled.dae  untitled.usdc
Common/: Camera.cpp  Camera.h  Color.cpp  Color.h  DataFormat.cpp  DataFormat.h  Input.cpp  Input.h  Layer.h  Logger.cpp  Logger.h  TimeStep.cpp  TimeStep.h  Utility.h  YiaMath.cpp  YiaMath.h
Component/: Component.h  GameObject.cpp  GameObject.h  IComponent.h  Light.h  MeshObject.cpp  MeshObject.h  MeshRenderer.h  RigidBody.cpp  RigidBody.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  Transform.cpp  Transform.h
Core/: CommandAllocatorManager.cpp  CommandAllocatorManager.h  CommandContext.cpp  CommandContext.h  CommandManager.h  CommandQueue.cpp  CommandQueue.h  CopyContext.cpp  CopyContext.h  DepthBuffer.cpp  DepthBuffer.h  DescriptorHeap.cpp  DescriptorHeap.h  GpuBuffer.cpp  GpuBuffer.h  GpuResource.cpp  GpuResource.h  GpuTexture.cpp  GpuTexture.h  Graphic.cpp  Graphic.h  GraphicContext.cpp  GraphicContext.h  InputLayout.h  Mesh.cpp  Mesh.h  PipelineStateObject.cpp  PipelineStateObject.h  RenderBuffer.cpp  RenderBuffer.h  ResourceAllocator.cpp  ResourceAllocator.h  ResourceLoder.cpp  ResourceLoder.h  RootSignature.cpp  RootSignature.h  Shader.cpp  Shader.h  Texture.cpp  UploadBuffer.cpp  (+4 more)
Event/: ApplicationEvent.h  Event.h  InputEvent.h
FrameFeature/: GeometryPass.cpp  GeometryPass.h
FrameGraph/: FrameGraph.cpp  FrameGraph.h  FramePass.cpp  FramePass.h  FrameResource.cpp  FrameResource.h  YiaFrameGraph.h
Layer/: ImguiLayer.cpp  ImguiLayer.h  Layer.cpp  Layer.h
OS/: ThreadSystem.cpp  ThreadSystem.h
Platform/: WinWindow.cpp  WinWindow.h  WindowInput.cpp  WindowInput.h
Renderer/: Image.h  Material.cpp  Material.h  Renderer.cpp  Renderer.h  Surface.h  Texture.cpp  Texture.h  YiaRenderer.h
SandBox/: BlurFreature.h  源.cpp
Shader/: BlitShader.hlsl  DefaultShader.hlsl  SampleShader.hlsl
VS2019/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  YiaEngine.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
YiaEngine/: CMakeLists.txt
YiaEngine/Engine/: CMakeLists.txt  CodeSyle.md
YiaEngine/Engine/Framework/: CMakeLists.txt  Utility.h
YiaEngine/Engine/Framework/Common/: Allocator.cpp  Allocator.h  Application.h  Buffer.h  CMakeLists.txt  ColorSpace.h  DataUtility.cpp  DataUtility.h  ImageParse.h  Input.cpp  Input.h  MacroHelp.h  MagicEnum.h  MemoryManager.cpp  MemoryManager.h  YiaEngine.cpp  YiaEngine.h  YiaTime.cpp  YiaTime.h  d3dx12.h
YiaEngine/Engine/Framework/Common/AssetLoder/: AssetLoder.cpp  AssetLoder.h  CMakeLists.txt
YiaEngine/Engine/Framework/Common/ImageParser/: BmpParser.h  Image.h  JPEGParser.h
YiaEngine/Engine/Framework/Common/Test/: CMakeLists.txt  test.cpp
YiaEngine/Engine/Framework/Core/: CommandAllocatorManager.cpp  CommandContext.cpp  CommandContext.h  CommandManager.h  CommandQueue.cpp  CommandQueue.h  DescriptorHeap.cpp  DescriptorHeap.h  GpuBuffer.cpp  GpuBuffer.h  GpuResource.h  Graphic.cpp  Graphic.h  GraphicContext.cpp  GraphicContext.h  Mesh.cpp  Mesh.h  PipelineStateObject.cpp  PipelineStateObject.h  PipelineStateStateObject.h  PipleStateObject.cpp  RenderBuffer.cpp  RenderBuffer.h  ResourceAllocator.cpp  ResourceAllocator.h  RootSignature.cpp  RootSignature.h  Texture.cpp  Texture.h  UploadBuffer.cpp  UploadBuffer.h
YiaEngine/Engine/Framework/Editor/: SceneWindow.h
YiaEngine/Engine/Framework/EditorWindow/: EditorWindow.h
YiaEngine/Engine/Framework/FrameGraph/: FrameGraph.h  FramePass.h
YiaEngine/Engine/Framework/Interface/: CMakeLists.txt  ImageParser.h  Interface.h
YiaEngine/Engine/Framework/Math/: CMakeLists.txt  CommonMath.cpp  CommonMath.h  GeomMath.cpp  GeomMath.h  GeomMathEx.cpp  GeomMatheEX.h  Geometry.h  YiaMath.h  swizzle.h
YiaEngine/Engine/Framework/Math/include/: AddByElement.h  simple.h
YiaEngine/Engine/Framework/Math/ispc/: AddByElement.ispc  CMakeLists.txt  Cross.ispc  DCT8X8.ispc  Dot.ispc  MatrixOperation.ispc  SubtractByElement.ispc  TestFunc.ispc  VectorFunc.ispc  simple.ispc
YiaEngine/Engine/Framework/Math/operation/: AddByElement.h  Cross.h  DCT8X8.h  Dot.h  MatrixOperation.h  SubtractByElement.h  TestFunc.h  VectorFunc.h  simple.h
YiaEngine/Engine/Framework/Math/test/: CMakeLists.txt  test.cpp
YiaEngine/Engine/Framework/Render/: WorldRenderer.h
YiaEngine/Engine/Framework/Render/FrameGraph/: FrameGraph.h  FramePass.h  ResourceSysetem.h
YiaEngine/Engine/Framework/Render/RenderPass/: CommonPass.h
YiaEngine/Engine/Framework/Sample/: CMakeLists.txt  DeferApp.cpp  DeferApp.h  Dx12Sample.cpp  Dx12Sample.h
YiaEngine/Engine/Framework/Scene/: CMakeLists.txt  SceneEnum.cpp  SceneEnum.h  SceneNode.cpp  SceneNode.h  SceneObject.h  SceneUtility.h
YiaEngine/Engine/Framework/Scene/Node/: BaseSceneNode.h  CameraNode.h  GeometryNode.h  LightNode.h
YiaEngine/Engine/Framework/Scene/Object/: BaseSceneObject.h  CameraObject.h  GeometryObject.h  IndexArray.h  LightObject.h  MaterialObject.h  MeshObject.cpp  MeshObject.h  SceneObject.h  TextureObject.h  Transform.h  VertexArray.h
YiaEngine/Engine/Framework/Scene/Test/: CMakeLists.txt  test.cpp
YiaEngine/Engine/Framework/Shader/: DeferShader.hlsl  PixelShader.hlsl  SampleLightShader.hlsl  Shader.hlsl  VertexShader.hlsl
YiaEngine/Engine/Framework/Windows/: CMakeLists.txt  WindowBase.cpp  WindowBase.h
YiaEngine/Engine/Meta/: Meta.h  MetaAttribute.h  MetaClass.h  MetaCore.h  MetaEnum.h  MetaHelper.h  Serialize.h  TypeList.h
YiaEngine/YiaEngine/: CMakeLists.txt  YiaEngine.cpp
vsout/: CMakeCache.txt
(+76 files in other folders)
